[package]
name = "bigchaindb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tweetnacl = "0.4.0"
crypto-conditions = { path = "./crypto-conditions" }
hex = "0.4.3"
sha3 = "0.10.8"
reqwest = { version = "0.11.23", features = ["json"] }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
chrono = "0.4.32"
