[package]
name = "crypto-conditions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = "0.15.5"
base64-url = "2.0.2"
bs58 = "0.5.0"
ed25519 = "2.2.3"
serde = { version = "1.0.194", features = ["derive"] }
sha2 = "0.10.8"
ring-compat = "0.8.0"
